--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-image-picker": "^7.1.2"
+    "react-native-image-picker": "^7.1.2",
+    "expo-image-picker": "~15.0.7",
+    "undefined": "@expo/vector-icons/MaterialIcons"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
