--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-native-emoji-selector": "^0.2.0",
     "react-native-image-picker": "^7.1.2",
     "expo-image-picker": "~15.0.7",
-    "undefined": "@expo/vector-icons/MaterialIcons"
+    "undefined": "@expo/vector-icons/MaterialIcons",
+    "react-native-gesture-handler": "~2.16.1",
+    "@expo/vector-icons": "^14.0.3",
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
