--- a/package.json
+++ b/package.json
@@ -9,24 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "expo": "~51.0.28",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-canvas": "^0.1.40",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-image-picker": "^7.1.2",
-    "expo-image-picker": "~15.0.7",
-    "undefined": "@expo/vector-icons/MaterialIcons",
     "react-native-gesture-handler": "~2.16.1",
-    "@expo/vector-icons": "^14.0.3",
-    "react-native-safe-area-context": "4.10.5"
+    "react-native-image-picker": "^7.1.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-svg": "15.2.0",
+    "react-native-webview": "^13.12.3",
+    "undefined": "@expo/vector-icons/MaterialIcons",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-canvas": "^0.1.13",
     "typescript": "^5.1.3"
   },
   "private": true
