--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -23,12 +24,12 @@
     "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "15.2.0",
-    "react-native-webview": "^13.12.3",
-    "undefined": "@expo/vector-icons/MaterialIcons",
-    "expo-av": "~14.0.7"
+    "react-native-webview": "13.8.6",
+    "undefined": "@expo/vector-icons/MaterialIcons"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
