--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "15.2.0",
     "react-native-webview": "13.8.6",
-    "undefined": "@expo/vector-icons/MaterialIcons"
+    "undefined": "@expo/vector-icons/MaterialIcons",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native-canvas": "^0.1.13",
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.1.3"
   },
   "private": true
