--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "15.2.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-webview": "13.8.6",
     "undefined": "@expo/vector-icons/MaterialIcons",
     "uuid": "^10.0.0"
